2012-02-26  Hajime Morrita  <morrita@chromium.org>

        Move ChromeClient::showContextMenu() to ContextMenuClient
        https://bugs.webkit.org/show_bug.cgi?id=79427

        Reviewed by Adam Barth.

        * src/ChromeClientImpl.h:
        (ChromeClientImpl):

2012-02-26  James Robinson  <jamesr@chromium.org>

        Take 2 build fix.

        * tests/CCLayerTreeHostImplTest.cpp:
        (WebKit::TEST_F):

2012-02-26  James Robinson  <jamesr@chromium.org>

        Compile fix for CCLayerTreeHostImpl test.

        * tests/CCLayerTreeHostImplTest.cpp:
        (WebKit::TEST_F):

2012-02-26  James Robinson  <jamesr@chromium.org>

        [chromium] Wire up shouldUpdateScrollPositionOnMainThread and nonFastScrollableRegion to compositor
        https://bugs.webkit.org/show_bug.cgi?id=79155

        Reviewed by Adam Barth.

        Add new tests for shouldScrollOnMainThread and nonFastScrollableRegion properties.

        * tests/CCLayerTreeHostImplTest.cpp:
        (WebKit::TEST_F):
        (WebKit):
        * tests/LayerChromiumTest.cpp:

2012-02-25  Adrienne Walker  <enne@google.com>

        [chromium] Unreviewed gardening, fix Linux Clang OwnPtr breakage
        https://bugs.webkit.org/show_bug.cgi?id=78404

        r108886 doesn't compile on Linux Clang due to OwnPtr's public copy
        constructor (i.e. "has internal linkage but is not defined"). Fixed
        locally by changing copy initialization to direct initialization.

        * tests/TiledLayerChromiumTest.cpp:
        (WTF::TEST):

2012-02-24  Tien-Ren Chen  <trchen@chromium.org>

        [chromium] Replace RefPtr with OwnPtr for CCLayerImpl tree structure
        https://bugs.webkit.org/show_bug.cgi?id=78404

        Reviewed by James Robinson.

        * tests/CCDamageTrackerTest.cpp:
        (WebKitTests::executeCalculateDrawTransformsAndVisibility):
        (WebKitTests::emulateDrawingOneFrame):
        (WebKitTests::createTestTreeWithOneSurface):