@@ -1,3 +1,10 @@
+2012-02-27  Adrienne Walker  <enne@google.com>
+
+        [chromium] Unreviewed gardening, disable TransparencyWinTest unit tests
+        https://bugs.webkit.org/show_bug.cgi?id=79718
+
+        * tests/TransparencyWinTest.cpp:
+
 2012-02-26  Hajime Morrita  <morrita@chromium.org>
 
         Move ChromeClient::showContextMenu() to ContextMenuClient
